[tool.poetry]
name = "req-http"
version = "0.1.0"
description = ""
authors = ["Gabriel Rozendo <gabrielsg236@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
httpx = "^0.27.2"
respx = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
